--- a/index.html
+++ b/index.html
@@ -7,7 +7,32 @@
     <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
+<header>
+    <h1>Header Title</h1>
+    <nav>
+        <ul>
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+            <li>Link 4</li>
+        </ul>
+    </nav>
+</header>
 <body>
-    <h1>Title</h1>
+    <h1>Body Title</h1>
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <button>Back to the top</button>
 </body>
+
+<!--! I need to be something for background music -->
+
+<footer>
+    <h6>Made by Curtis</h6>
+    <a href="">Social Link 1</a>
+    <a href="">Social Link 2</a>
+</footer>
 </html>
