--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </header>
 <body>
     <h1>Body Title</h1>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="./AmmanAcropolis.jpeg" alt="The ruins on the Acropolis in the centre of modern Amman, the capital of Jordan">
+    <img src="./Jerash.jpeg" alt="The ruins of ancient Jerash, Jordan">
+    <img src="./KingsRoad.jpeg" alt="The Kings Road, Jordan. View traveling south between Amman and Petra">
+    <img src="./Petra.jpeg" alt="Temples into the cliffs in Petra, Jordan">
+    <img src="./Monastery.jpeg" alt="The Monastery that lies a 40 min climb from Petra">
     <button>Back to the top</button>
 </body>
 
