Folder structure changes, CSS started, Flexbox testing with divs

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </header>
 <body>
     <h1>Body Title</h1>
-    <img src="./AmmanAcropolis.jpeg" alt="The ruins on the Acropolis in the centre of modern Amman, the capital of Jordan">
-    <img src="./Jerash.jpeg" alt="The ruins of ancient Jerash, Jordan">
-    <img src="./KingsRoad.jpeg" alt="The Kings Road, Jordan. View traveling south between Amman and Petra">
-    <img src="./Petra.jpeg" alt="Temples into the cliffs in Petra, Jordan">
-    <img src="./Monastery.jpeg" alt="The Monastery that lies a 40 min climb from Petra">
+    <img src="./Resources/AmmanAcropolis.jpeg" alt="The ruins on the Acropolis in the centre of modern Amman, the capital of Jordan">
+    <img src="./Resources/Jerash.jpeg" alt="The ruins of ancient Jerash, Jordan">
+    <img src="./Resources/KingsRoad.jpeg" alt="The Kings Road, Jordan. View traveling south between Amman and Petra">
+    <img src="./Resources/Petra.jpeg" alt="Temples into the cliffs in Petra, Jordan">
+    <img src="./Resources/Monastery.jpeg" alt="The Monastery that lies a 40 min climb from Petra">
     <button>Back to the top</button>
 </body>
 
@@ -32,7 +32,9 @@
 
 <footer>
     <h6>Made by Curtis</h6>
-    <a href="">Social Link 1</a>
-    <a href="">Social Link 2</a>
+    <div class="footerText">Images are authors own</div>
+    <a href="">Official Jordan Tourism Site</a>
+    <a href="">Petra</a>
+    <a href="">Jerash</a>
 </footer>
 </html>
