Nav links working, self set goal added to README

--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./app.js"></script>
     <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+    <title>Travels in Jordan</title>
 </head>
 <header>
-    <h1>Header Title</h1>
+    <h1>Travels in Jordan</h1>
     <nav>
         <ul>
-            <li>Link 1</li>
-            <li>Link 2</li>
-            <li>Link 3</li>
-            <li>Link 4</li>
+            <li><a href="#amman">Amman</a></li>
+            <li><a href="#jerash">Jerash</a></li>
+            <li><a href="#kingsRoad">The Kings Road</a></li>
+            <li><a href="#petra">Petra</a></li>
+            <li><a href="#monastery">Monastery</a></li>
         </ul>
     </nav>
 </header>
 <body>
-    <h1>Body Title</h1>
-    <img src="./Resources/AmmanAcropolis.jpeg" alt="The ruins on the Acropolis in the centre of modern Amman, the capital of Jordan">
-    <img src="./Resources/Jerash.jpeg" alt="The ruins of ancient Jerash, Jordan">
-    <img src="./Resources/KingsRoad.jpeg" alt="The Kings Road, Jordan. View traveling south between Amman and Petra">
-    <img src="./Resources/Petra.jpeg" alt="Temples into the cliffs in Petra, Jordan">
-    <img src="./Resources/Monastery.jpeg" alt="The Monastery that lies a 40 min climb from Petra">
-    <button>Back to the top</button>
+    <!-- <h1>Body Title</h1>  -->
+    <img id="amman" src="./Resources/AmmanAcropolis.jpeg" alt="The ruins on the Acropolis in the centre of modern Amman, the capital of Jordan"><p>The ruins on the Acropolis in the centre of modern Amman, the capital of Jordan</p>
+    <img id="jerash" src="./Resources/Jerash.jpeg" alt="The ruins of ancient Jerash, Jordan"><p>The ruins of ancient Jerash, Jordan</p>
+    <img id="kingsRoad" src="./Resources/KingsRoad.jpeg" alt="The Kings Road, Jordan. View traveling south between Amman and Petra"><p>The Kings Road, Jordan. View traveling south between Amman and Petra</p>
+    <img id="petra" src="./Resources/Petra.jpeg" alt="Temples into the cliffs in Petra, Jordan"><p>Temples into the cliffs in Petra, Jordan</p>
+    <img id="monastery" src="./Resources/Monastery.jpeg" alt="The Monastery that lies a 40 min climb from Petra"><p>The Monastery that lies a 40 min climb from Petra</p>
+    <button>Back to the top</button>p
 </body>
 
 <!--! I need to be something for background music -->
 
 <footer>
     <h6>Made by Curtis</h6>
-    <div class="footerText">Images are authors own</div>
+    <div>Images are authors own</div>
     <a href="">Official Jordan Tourism Site</a>
     <a href="">Petra</a>
     <a href="">Jerash</a>
