--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./app.js"></script>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="shortcut icon" href="./Resources/favicon.png" type="image/x-icon">
     <title>Travels in Jordan</title>
 </head>
 <header>
