External Links added

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <footer>
     <h6>Made by Curtis</h6>
     <div>Images are authors own</div>
-    <a href="">Official Jordan Tourism Site</a>
-    <a href="">Petra</a>
-    <a href="">Jerash</a>
+    <a href="https://visitjordan.com/">Jordan Tourism Board</a>
+    <a href="https://www.visitpetra.jo/">Petra</a>
+    <a href="https://www.lonelyplanet.com/jordan/jerash-and-the-north/jerash/attractions/roman-ruins-of-jerash/a/poi-sig/1456891/361072">Jerash</a>
 </footer>
 </html>
