--- a/index.html
+++ b/index.html
@@ -1,42 +1,82 @@
 <!DOCTYPE html>
 <html lang="en-GB">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./app.js"></script>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="shortcut icon" href="./Resources/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="shortcut icon"
+      href="./Resources/favicon.png"
+      type="image/x-icon"
+    />
     <title>Travels in Jordan</title>
-</head>
-<header>
+  </head>
+  <header>
     <h1>Travels in Jordan</h1>
     <nav>
-        <ul>
-            <li><a href="#amman">Amman</a></li>
-            <li><a href="#jerash">Jerash</a></li>
-            <li><a href="#kingsRoad">The Kings Road</a></li>
-            <li><a href="#petra">Petra</a></li>
-            <li><a href="#monastery">Monastery</a></li>
-        </ul>
+      <ul>
+        <li><a href="#amman">Amman</a></li>
+        <li><a href="#jerash">Jerash</a></li>
+        <li><a href="#kingsRoad">The Kings Road</a></li>
+        <li><a href="#petra">Petra</a></li>
+        <li><a href="#monastery">Monastery</a></li>
+      </ul>
     </nav>
-</header>
-<body>
+  </header>
+  <body>
     <!-- <h1>Body Title</h1>  -->
-    <img id="amman" src="./Resources/AmmanAcropolis.jpeg" alt="The ruins on the Acropolis in the centre of modern Amman, the capital of Jordan"><p>The ruins on the Acropolis in the centre of modern Amman, the capital of Jordan</p>
-    <img id="jerash" src="./Resources/Jerash.jpeg" alt="The ruins of ancient Jerash, Jordan"><p>The ruins of ancient Jerash, Jordan</p>
-    <img id="kingsRoad" src="./Resources/KingsRoad.jpeg" alt="The Kings Road, Jordan. View traveling south between Amman and Petra"><p>The Kings Road, Jordan. View traveling south between Amman and Petra</p>
-    <img id="petra" src="./Resources/Petra.jpeg" alt="Temples into the cliffs in Petra, Jordan"><p>Temples into the cliffs in Petra, Jordan</p>
-    <img id="monastery" src="./Resources/Monastery.jpeg" alt="The Monastery that lies a 40 min climb from Petra"><p>The Monastery that lies a 40 min climb from Petra</p>
-    <button>Back to the top</button>p
-</body>
+    <img
+      id="amman"
+      src="./Resources/AmmanAcropolis.jpeg"
+      alt="The ruins on the Acropolis in the centre of modern Amman, the capital of Jordan"
+    />
+    <p>
+      The ruins on the Acropolis in the centre of modern Amman, the capital of
+      Jordan
+    </p>
+    <img
+      id="jerash"
+      src="./Resources/Jerash.jpeg"
+      alt="The ruins of ancient Jerash, Jordan"
+    />
+    <p>The ruins of ancient Jerash, Jordan</p>
+    <img
+      id="kingsRoad"
+      src="./Resources/KingsRoad.jpeg"
+      alt="The Kings Road, Jordan. View traveling south between Amman and Petra"
+    />
+    <p>The Kings Road, Jordan. View traveling south between Amman and Petra</p>
+    <img
+      id="petra"
+      src="./Resources/Petra.jpeg"
+      alt="Temples into the cliffs in Petra, Jordan"
+    />
+    <p>Temples into the cliffs in Petra, Jordan</p>
+    <img
+      id="monastery"
+      src="./Resources/Monastery.jpeg"
+      alt="The Monastery that lies a 40 min climb from Petra"
+    />
+    <p>The Monastery that lies a 40 min climb from Petra</p>
+    <button class="backToTop" onclick="scrollToTop()">Back to Top</button>
+    <script>
+      function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: "smooth" })
+      }
+    </script>
+  </body>
 
-<!--! I need to be something for background music -->
+  <!--! I need to be something for background music -->
 
-<footer>
+  <footer>
     <h6>Made by Curtis</h6>
     <div>Images are authors own</div>
     <a href="https://visitjordan.com/">Jordan Tourism Board</a>
     <a href="https://www.visitpetra.jo/">Petra</a>
-    <a href="https://www.lonelyplanet.com/jordan/jerash-and-the-north/jerash/attractions/roman-ruins-of-jerash/a/poi-sig/1456891/361072">Jerash</a>
-</footer>
+    <a
+      href="https://www.lonelyplanet.com/jordan/jerash-and-the-north/jerash/attractions/roman-ruins-of-jerash/a/poi-sig/1456891/361072"
+      >Jerash</a
+    >
+  </footer>
 </html>
