index-fr.html added

--- a/index-fr.html
+++ b/index-fr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,17 +10,17 @@
       href="./Resources/favicon.png"
       type="image/x-icon"
     />
-    <title>Travels in Jordan</title>
+    <title>Voyages en Jordanie</title>
   </head>
   <header>
-    <h1>Travels in Jordan</h1>
+    <h1>Voyages en Jordanie</h1>
     <nav>
       <ul>
         <li><a href="#amman">Amman</a></li>
-        <li><a href="#jerash">Jerash</a></li>
-        <li><a href="#kingsRoad">The Kings Road</a></li>
-        <li><a href="#petra">Petra</a></li>
-        <li><a href="#monastery">Monastery</a></li>
+        <li><a href="#jerash">Jérash</a></li>
+        <li><a href="#kingsRoad">La route du Roi</a></li>
+        <li><a href="#petra">Pétra</a></li>
+        <li><a href="#monastery">Monastère</a></li>
       </ul>
         <a href="./index.html">EN</a> /
         <a href="./index-fr.html">FR</a>
@@ -31,37 +31,36 @@
     <img
       id="amman"
       src="./Resources/AmmanAcropolis.jpeg"
-      alt="The ruins on the Acropolis in the centre of modern Amman, the capital of Jordan"
+      alt="Les ruines de l'Acropole, au cœur d'Amman, capitale de la Jordainie"
     />
     <p>
-      The ruins on the Acropolis in the centre of modern Amman, the capital of
-      Jordan
+      Les ruines de l'Acropole, au cœur d'Amman, capitale de la Jordainie
     </p>
     <img
       id="jerash"
       src="./Resources/Jerash.jpeg"
-      alt="The ruins of ancient Jerash, Jordan"
+      alt="Les ruines de l'ancienne Jerash"
     />
-    <p>The ruins of ancient Jerash, Jordan</p>
+    <p>Les ruines de l'ancienne Jerash</p>
     <img
       id="kingsRoad"
       src="./Resources/KingsRoad.jpeg"
-      alt="The Kings Road, Jordan. View traveling south between Amman and Petra"
+      alt="La Route du Roi, Jordanie. Vue vers le sud, entra Amman et Pétra"
     />
-    <p>The Kings Road, Jordan. View traveling south between Amman and Petra</p>
+    <p>La Route du Roi, Jordanie. Vue vers le sud, entra Amman et Pétra</p>
     <img
       id="petra"
       src="./Resources/Petra.jpeg"
-      alt="Temples carved into the cliffs in Petra, Jordan"
+      alt="Temples creusés dans les falaise, Pétra, Jordanie"
     />
-    <p>Temples carved into the cliffs in Petra, Jordan</p>
+    <p>Temples creusés dans les falaise, Pétra, Jordanie</p>
     <img
       id="monastery"
       src="./Resources/Monastery.jpeg"
-      alt="The Monastery that lies a 40 min climb from Petra"
+      alt="Le monastère qui se trouve à 40 minutes de montée de Pétra"
     />
-    <p>The Monastery that lies a 40 min climb from Petra</p>
-    <button class="backToTop" onclick="scrollToTop()">Back to Top</button>
+    <p>Le monastère qui se trouve à 40 minutes de montée de Pétra</p>
+    <button class="backToTop" onclick="scrollToTop()">Retour en haut</button>
     <script>
       function scrollToTop() {
         window.scrollTo({ top: 0, behavior: "smooth" })
