Background music added. HTML updated ready for flex

--- a/index-fr.html
+++ b/index-fr.html
@@ -12,6 +12,7 @@
     />
     <title>Voyages en Jordanie</title>
   </head>
+
   <header>
     <h1>Voyages en Jordanie</h1>
     <nav>
@@ -22,12 +23,12 @@
         <li><a href="#petra">Pétra</a></li>
         <li><a href="#monastery">Monastère</a></li>
       </ul>
-        <a href="./index.html">EN</a> /
+        <a href="./index.html">EN </a> /
         <a href="./index-fr.html">FR</a>
     </nav>
   </header>
+
   <body>
-    <!-- <h1>Body Title</h1>  -->
     <img
       id="amman"
       src="./Resources/AmmanAcropolis.jpeg"
@@ -39,9 +40,9 @@
     <img
       id="jerash"
       src="./Resources/Jerash.jpeg"
-      alt="Les ruines de l'ancienne Jerash"
+      alt="Les ruines de l'ancienne Jérash"
     />
-    <p>Les ruines de l'ancienne Jerash</p>
+    <p>Les ruines de l'ancienne Jérash</p>
     <img
       id="kingsRoad"
       src="./Resources/KingsRoad.jpeg"
@@ -63,21 +64,18 @@
     <button class="backToTop" onclick="scrollToTop()">Retour en haut</button>
     <script>
       function scrollToTop() {
-        window.scrollTo({ top: 0, behavior: "smooth" })
-      }
+        window.scrollTo({ top: 0, behavior: "smooth" })}
     </script>
   </body>
 
-  <!--! I need to be something for background music -->
+  <audio autoplay controls src="./bymyside.mp3"></audio>
 
-  <footer>
-    <h6>Made by Curtis</h6>
-    <div>Images are authors own</div>
-    <a href="https://visitjordan.com/">Jordan Tourism Board</a>
-    <a href="https://www.visitpetra.jo/">Petra</a>
-    <a
-      href="https://www.lonelyplanet.com/jordan/jerash-and-the-north/jerash/attractions/roman-ruins-of-jerash/a/poi-sig/1456891/361072"
-      >Jerash</a
-    >
+  <footer>Site réalisé par Curtis</h6>
+    <div>Les images sont la propriété des auteurs</div>
+    <nav>
+      <a href="https://fr.visitjordan.com/">Jordan Tourism Board - Informations touristiques en français </a>
+      <a href="https://www.lonelyplanet.fr/destinations/moyen-orient/jordanie/petra">Pétra</a>
+      <a href="https://www.lonelyplanet.fr/destinations/moyen-orient/jordanie/jerash-irbid-et-la-vallee-du-jourdain">Jérash</a>
+    </nav>
   </footer>
 </html>
