--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <title>Travels in Jordan</title>
   </head>
+
   <header>
     <h1>Travels in Jordan</h1>
     <nav>
@@ -26,8 +27,8 @@
         <a href="./index-fr.html">FR</a>
     </nav>
   </header>
+
   <body>
-    <!-- <h1>Body Title</h1>  -->
     <img
       id="amman"
       src="./Resources/AmmanAcropolis.jpeg"
@@ -64,12 +65,11 @@
     <button class="backToTop" onclick="scrollToTop()">Back to Top</button>
     <script>
       function scrollToTop() {
-        window.scrollTo({ top: 0, behavior: "smooth" })
-      }
+        window.scrollTo({ top: 0, behavior: "smooth" })}
     </script>
   </body>
 
-  <!--! I need to be something for background music -->
+  <audio autoplay controls src="./bymyside.mp3"></audio>
 
   <footer>
     <h6>Made by Curtis</h6>
