Started flex. Commented out Audio.

--- a/index-fr.html
+++ b/index-fr.html
@@ -69,7 +69,7 @@
     </script>
   </body>
 
-  <audio autoplay controls src="./Resources/bymyside.mp3"></audio>
+  <!-- <audio autoplay controls src="./Resources/bymyside.mp3"></audio> -->
 
   <footer>Site réalisé par Curtis</h6>
     <div>Les images sont la propriété des auteurs</div>
