--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </script>
   </body>
 
-  <audio autoplay controls src="./Resources/bymyside.mp3"></audio>
+  <!-- <audio autoplay controls src="./Resources/bymyside.mp3"></audio> -->
 
   <footer>
     <h6>Made by Curtis</h6>
