Class anchors added for overlay. Header bar sticky complete.

--- a/index-fr.html
+++ b/index-fr.html
@@ -13,7 +13,7 @@
     <title>Voyages en Jordanie</title>
   </head>
 
-  <header>
+  <header class="header">
     <h1>Voyages en Jordanie</h1>
     <nav>
       <ul>
@@ -31,36 +31,41 @@
   <body class="flexContainer">
     <div>
       <img
+      class="imageContainer"
       id="amman"
       src="./Resources/AmmanAcropolis.jpeg"
       alt="Les ruines de l'Acropole, au cœur d'Amman, capitale de la Jordainie"/>
-      <p>Les ruines de l'Acropole, au cœur d'Amman, capitale de la Jordainie</p>
+      <p class="imageText">Les ruines de l'Acropole, au cœur d'Amman, capitale de la Jordainie</p>
     </div>
     <div>
       <img
+      class="imageContainer"
       id="jerash"
       src="./Resources/Jerash.jpeg"
       alt="Les ruines de l'ancienne Jérash"/>
-      <p>Les ruines de l'ancienne Jérash</p>
+      <p class="imageText">Les ruines de l'ancienne Jérash</p>
     </div>
     <img
+    class="imageContainer"
       id="kingsRoad"
       src="./Resources/KingsRoad.jpeg"
       alt="La Route du Roi, Jordanie. Vue vers le sud, entra Amman et Pétra"/>
-    <p>La Route du Roi, Jordanie. Vue vers le sud, entra Amman et Pétra</p>
+    <p class="imageText">La Route du Roi, Jordanie. Vue vers le sud, entra Amman et Pétra</p>
     <div>
       <img
+      class="imageContainer"
       id="petra"
       src="./Resources/Petra.jpeg"
       alt="Temples creusés dans les falaise, Pétra, Jordanie"/>
-      <p>Temples creusés dans les falaise, Pétra, Jordanie</p>
+      <p class="imageText">Temples creusés dans les falaise, Pétra, Jordanie</p>
     </div>
     <div>
       <img
+      class="imageContainer"
       id="monastery"
       src="./Resources/Monastery.jpeg"
       alt="Le monastère qui se trouve à 40 minutes de montée de Pétra"/>
-      <p>Le monastère qui se trouve à 40 minutes de montée de Pétra</p>
+      <p class="imageText">Le monastère qui se trouve à 40 minutes de montée de Pétra</p>
     </div>
     <button class="backToTop" onclick="scrollToTop()">Retour en haut</button>
     <script>
