--- a/index-fr.html
+++ b/index-fr.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./app.js"></script>
+    <link rel="stylesheet" href="./node_modules/minireset.css/minireset.css">
     <link rel="stylesheet" href="./styles.css" />
     <link
       rel="shortcut icon"
