Basic styling for text to overlay images

--- a/index-fr.html
+++ b/index-fr.html
@@ -46,12 +46,14 @@
       alt="Les ruines de l'ancienne Jérash"/>
       <p class="imageText">Les ruines de l'ancienne Jérash</p>
     </div>
-    <img
-    class="imageContainer"
+    <div>
+      <img
+      class="imageContainer"
       id="kingsRoad"
       src="./Resources/KingsRoad.jpeg"
       alt="La Route du Roi, Jordanie. Vue vers le sud, entra Amman et Pétra"/>
-    <p class="imageText">La Route du Roi, Jordanie. Vue vers le sud, entra Amman et Pétra</p>
+      <p class="imageText">La Route du Roi, Jordanie. Vue vers le sud, entra Amman et Pétra</p>
+    </div>
     <div>
       <img
       class="imageContainer"
